--- a/npm/ng-packs/packages/feature-management/project.json
+++ b/npm/ng-packs/packages/feature-management/project.json
@@ -9,7 +9,8 @@
       "executor": "@nx/angular:package",
       "outputs": ["{workspaceRoot}/dist/packages/feature-management"],
       "options": {
-        "project": "packages/feature-management/ng-package.json"
+        "project": "packages/feature-management/ng-package.json",
+        "updateBuildableProjectDepsInPackageJson": true
       },
       "configurations": {
         "production": {
