--- a/.gitignore
+++ b/.gitignore
@@ -324,6 +324,8 @@ deploy/ssh-password.txt
 deploy/github-api-key.txt
 deploy/_run_all_log.txt
 
+# Remove lock files in npm folder
+npm/**/yarn.lock
 
 # No commit yarn.lock files in the subfolders of templates directory
 templates/**/yarn.lock
