--- a/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.AuthServer/appsettings.json
+++ b/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.AuthServer/appsettings.json
@@ -6,7 +6,7 @@
     "RedirectAllowedUrls": "http://localhost:4200,https://localhost:44302,https://localhost:44307,https://localhost:44309"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=MyProjectName;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=localhost;Database=MyProjectName;User ID=SA;Password=12345678Aa;TrustServerCertificate=True"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
