--- a/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.HttpApi.Host/appsettings.json
+++ b/templates/app/aspnet-core/src/MyCompanyName.MyProjectName.HttpApi.Host/appsettings.json
@@ -3,7 +3,7 @@
     "CorsOrigins": "https://*.MyProjectName.com,http://localhost:4200,https://localhost:44307,https://localhost:44309"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=MyProjectName;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=localhost;Database=MyProjectName;User ID=SA;Password=12345678Aa;TrustServerCertificate=True"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
